--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
         }
     }
     implementation "androidx.core:core-splashscreen:1.0.1"
+    implementation "pl.droidsonroids.gif:android-gif-drawable:1.2.22"
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
