--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ android {
 
 dependencies {
 
+    implementation fileTree(dir: 'C:\\Users\\Admin\\AppData\\Local\\Android\\Sdk\\platforms\\android-33', include: ['*.aar', '*.jar'], exclude: [])
     constraints {
         implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
             because("kotlin-stdlib-jdk7 is now a part of kotlin-stdlib")
